cmake_minimum_required(VERSION 3.0.0)
project(bonobo C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(BONOBO_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/include CACHE FILEPATH "The location of Bonobo include files.")
set(BONOBO_LINK_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib CACHE FILEPATH "The location of Bonobo libraries to link against.")
set(BVM_EXECUTABLE bvm CACHE STRING "The name of the BVM executable.")
set(BONOBO_LIBRARY bonobo CACHE STRING "The name of the Bonobo library to link against.")
add_subdirectory(src)